[tool.poetry]
name = "kibela-client"
version = "0.1.0"
readme = "README.md"
license = "MIT"
description = ""
include = ["CHANGELOG.md"]
homepage = "https://github.com/chanyou0311/kibela-client-python"
repository = "https://github.com/chanyou0311/kibela-client-python"
authors = ["chanyou0311 <chanyou0311@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
